# CUPTI_NVPW_BEVFormer

./: .gitattributes  .gitignore  README.md
benchmarks/MSDA/: benchmark_msda_latency.py  profile_msda_nvpw.py
integrations/: bevformer_instrumentation.py  bevformer_stage_hooks.py  nvtx_ranges.py  run_instrumented_bevformer.py
profilers/activity_profiler/: CMakeLists.txt
profilers/activity_profiler/src/: activity_profiler.cpp
profilers/msda_nvpw_replay/: CMakeLists.txt
profilers/msda_nvpw_replay/src/: msda_nvpw_replay.cpp
scripts/: capture_real_msda_sample.sh  clean_generated.sh  collect_reports.py  download_bevformer_checkpoint.sh  render_figures.py  run_activity_profile.sh  run_msda_benchmark.sh  run_msda_nvpw.sh  run_official_tool_comparison.sh  validate_nuscenes_mini.py  verify_real_pipeline.py  visualize_nuscenes.py
